# SUAS-Competition

./: .gitignore  .travis.yml  DESCRIPTION.rst  README.md  WaypointConverter  abcd  clear_unwanted_files.py  download_image.py  download_images.pl  gpio_communication.py  gpio_shooting.py  ground_station_log_parser.py  image_detection_test_file.py  image_parser.py  image_parsing.py  image_testing.py  install.sh  install_external.sh  install_external_travis.sh  interop_client_crash_demo.py  main_program.py  options.py  processor.py  requirements.txt  rover.py  run_travis.sh  setup.py  shoot_image.lua  shoot_image.py  suasimageparser.py
2014 - 2015/: LICENSE  README.md  gpio_shooting.py  initialization_script.sh  shoot_image.py
Android_App/: README.md
EdgeDetection/: build.xml
EigenFit/: setup.py
HarrisonDev/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  cropper  cropper.cpp
HarrisonDev/include/: FlyCapture2Defs.h
HarrisonDev/include/C/: FlyCapture2Defs_C.h  FlyCapture2Platform_C.h  FlyCapture2_C.h  MultiSyncLibraryPlatform_C.h  MultiSyncLibrary_C.h
ImageDetection/: file_tester.py  setup.py
ImageProcessingAlgorithms/: README.md  denoising.py  derivative_filtering.py  gaussian_blurring.py  histogram_equalization.py
ImageProcessingFinalRewrite/: .project  .pydevproject
ImgProcessingCLI/: example.py  setup.py
MovingObstacleSimulatorPackage/: setup.py
PeterDev/: AngleFitter.py  ArrayHelper.py  CannyEdge.py  CharacterCropper.py  Circle.py  ClusterLeastSquare.py  ColorLayer.py  ColorLayers.py  ColorSeparation.py  CovarianceMatrix.py  Drawer.py  EdgeDetection.py  FieldObject.py  FontFitter.py  GaussianBlur.py  GrayScale.py  HarrisCorner.py  HoughCircles.py  HoughLine.py  ImageFinder.py  ImageOperations.py  KMeans.py  KernelApplier.py  LetterClusterer.py  LetterFrame.py  LetterFrames.py  Line.py  LineCaster.py  Main.py  MatrixMath.py  Paint.py  SWT.py  (+11 more)
(+922 files in other folders)
